plugins {
  id 'java'
  id 'org.springframework.boot' version '3.5.9'
  id 'io.spring.dependency-management' version '1.1.7'
}

group = 'me.hanju'
version = '0.2.2'
description = "Branching, Append-Only Tree Structure API"

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

repositories {
  mavenCentral()
  maven { url 'https://jitpack.io' }
}

ext {
  set('springCloudVersion', "2025.0.1")
}

dependencyManagement {
  imports {
    mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
  }
}

dependencies {
  implementation 'com.github.agent-hanju:branchdown-api:0.2.2'

  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-actuator'
  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
  developmentOnly 'org.springframework.boot:spring-boot-devtools'

  runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
  runtimeOnly 'org.springframework.cloud:spring-cloud-starter-consul-discovery'

  compileOnly 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'

  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.springframework.boot:spring-boot-testcontainers'
  testImplementation 'org.testcontainers:junit-jupiter'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
  testImplementation 'org.testcontainers:mariadb'
  testCompileOnly 'org.projectlombok:lombok'
  testAnnotationProcessor 'org.projectlombok:lombok'

}

tasks.named('test') {
  useJUnitPlatform()
}

// bootRun 대신 bootTestRun 사용
tasks.named('bootRun') {
  enabled = false
}
